--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,5 @@
-# Configuration pour la production
-REACT_APP_API_URL=https://votre-backend-domain.coolify
-NODE_ENV=production
+# Configuration de l'application de paris e-sportifs
 
-# Pour le développement local
-# REACT_APP_API_URL=http://localhost:5000
+
+VITE_API_URL=http://localhost:5000
+
